--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2492,6 +2492,17 @@ div.messages li {
     width: 163px;
 }
 
+#result-table-step2 .company-rating {
+    height: 20px;
+    text-align: center;
+}
+
+#result-table-step2 .company-rating img {
+    display: inline !important;
+    width: 20px;
+    padding-top: 0px !important;
+}
+
 #result-table-step2 .company-data-osago{
     position: relative;
     width: 279px;
