--- a/insurance/templates/calc/kasko/step2.html
+++ b/insurance/templates/calc/kasko/step2.html
@@ -234,7 +234,15 @@
                                         <div class="company-data">
                                             <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}"
                                                  alt="{{ comp.full_name }}"/>
-                                            <img src="/static/images/stars_temp.png" alt="" />
+                                                 <div class="company-rating">
+                                                      {% for r in comp.rating_stars %}
+                                                      {% if r %}
+                                                        <img src="/static/images/star.png" alt="" />
+                                                      {% else %}
+                                                        <img src="/static/images/nostar.png" alt="" />
+                                                      {% endif %}
+                                                      {% endfor %}
+                                                 </div>
                                             {% if comp.company_comment %}
                                                 <a class="conditions" href="#">
                                                     Условия
