--- a/insurance/templates/calc/success.html
+++ b/insurance/templates/calc/success.html
@@ -6,4 +6,5 @@
 {% block tab_content %}
     <h2>Создание полиса завершено успешно</h2>
 
+    Созданные заявки на полисы вы можете увидеть в разделе <a href="{% url userprofile_policylist %}">«Мои полисы»</a> профиля.
 {% endblock %}
