--- a/insurance/templates/calc/kasko/step4.html
+++ b/insurance/templates/calc/kasko/step4.html
@@ -99,6 +99,12 @@
 
 {% block tab_content %}
 
+    <ul class="step-ui-tabs-nav active-1">
+        <li><a>Водители</a></li>
+        <li><a>Автомобиль</a></li>
+        <li><a>Доставка</a></li>
+    </ul>
+
     <form action="" method="post" id="step">
         {{ form.non_field_errors }}
         {% csrf_token %}
