--- a/insurance/templates/calc/kasko/step5.html
+++ b/insurance/templates/calc/kasko/step5.html
@@ -79,7 +79,11 @@
 
 
 {% block tab_content %}
-
+    <ul class="step-ui-tabs-nav active-2">
+        <li><a>Водители</a></li>
+        <li><a>Автомобиль</a></li>
+        <li><a>Доставка</a></li>
+    </ul>
     {{ form.non_field_errors }}
     <form action="" method="post" id="step" style="position: relative">
         {% csrf_token %}
@@ -169,11 +173,14 @@
 
             <table id="auto-owner-table">
                 <tr>
-                    <td>{{ form.owner_first_name }}
-                    {{ form.owner_first_name.errors }}</td>
-                    <td>{{ form.owner_last_name }}
+                    <td>
+                        <h5>Фамилия</h5>
+                        {{ form.owner_last_name }}
                     {{ form.owner_last_name.errors }}</td>
-                    <td>{{ form.owner_middle_name }}
+                    <td>
+                        <h5>Имя</h5>{{ form.owner_first_name }}
+                    {{ form.owner_first_name.errors }}</td>
+                    <td><h5>Отчество</h5>{{ form.owner_middle_name }}
                     {{ form.owner_middle_name.errors }}</td>
                 </tr>
                 <tr>
